# iterative-dp

./: pyproject.toml  requirements.txt
iterative_dp/: __init__.py  best_mixture_error.py  best_mixture_error_pub.py  dualquery.py  gem.py  hdmm.py  mwem.py  pep.py  pep_pub.py  pmw_pub.py  rap.py
iterative_dp/Util/: cdp2adp.py  collect_results.py  data_pub_sampling.py  find_best_params.py  init_state_errors.py  util_gem.py  util_general.py
iterative_dp/Util/hdmm/: error.py  mechanism.py  more_templates.py  templates.py  workload.py
iterative_dp/mbi/: __init__.py  dataset.py  graphical_model.py  inference.py  mechanism.py
