[tool.poetry]
name = "iterative-dp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
rdt = ">=0.5.0,<0.6"
torch = "^1.6.0"
tqdm = "^4.62.3"
networkx = "^2.6.3"
matplotlib = "^3.5.1"
pandas = ">=1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
